# GravNet

./: .gitignore  amkpd_model.py  amkpd_model_backup2.py  amkpd_v1_model.py  analysis_2layer_vs_5layer.md  analysis_gradient_vanishing.md  analysis_urm_loop8_vs_loop16.md  analysis_urm_vs_ours.md  analyze_gnorm.py  architecture_diff.md  dataset.py  diagnose_gnorm.py  eval_checkpoint.py  eval_loop_accuracy.py  main.py  measure_gravity.py  pretrain.py  prompt.txt  puzzle_dataset.py  pyproject.toml  test_loops.py  test_q_change.py  train.py  train_gnorm_diag.py  train_urm.py  train_v1.py  urm_model.py  utils.py  visualize_correct.py  visualize_dynamics.py  visualize_head_evolution.py  visualize_head_evolution_old.py
config/: cfg_pretrain.yaml
config/arch/: amkpd.yaml  urm.yaml
data/: build_arc_dataset.py  build_maze_dataset.py  build_sudoku.sh  build_sudoku_dataset.py  common.py
docs/changes/: elu1_scalar_kernel.md  qk_norm.md  urm_vs_amkpd_diff.md
models/: layers.py  losses.py  muon.py  sparse_embedding.py
models/amkpd/: amkpd.py
models/urm/: urm.py
ref/: pretrain.py
scripts/: AMKPD_sudoku.sh  URM_sudoku.sh
