[project]
name = "gravnet"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "argdantic>=1.3.3",
    "huggingface-hub>=1.8.0",
    "numpy>=2.4.3",
    "torch>=2.8.0",
    # "triton>=3.0.0",  # Linux 서버에서만 설치 (torch.compile용)
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
