[project]
name = "gravnet"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "torch>=2.8.0",
    "numpy>=2.4.3",
    "einops>=0.8.0",
    "pydantic>=2.0",
    "adam-atan2-pytorch>=0.2.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.19.0",
    "tqdm>=4.67.3",
    "coolname>=2.0.0",
    "argdantic>=1.3.3",
    "huggingface-hub>=1.8.0",
    "scikit-learn>=1.6.0",
    # "flash-attn>=2.0",  # URM attention용 (Linux + Ampere+ GPU 필요)
    # "triton>=3.0.0",    # torch.compile용 (Linux 서버에서만 설치)
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
